--- a/include.html
+++ b/include.html
@@ -4,6 +4,6 @@
   <meta charset="utf-8">
   <title>Lili down !</title>
   <body style="margin:0px;padding:0px;overflow:hidden">
-    <iframe src="//hugolpz.github.io/lilidown/index.html" frameborder="0" style="overflow:hidden;height:100%;width:100%" height="100%" width="100%"></iframe>
+    <iframe src="//hugolpz.github.io/lilidown/index.html" frameborder="0" style="overflow:hidden;height:100%;min-height:1280px;width:100%" height="100%" width="100%"></iframe>
   </body>
 </html>
