--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     </g>
   </svg>
     <a href="https://twitter.com/LingLibre_WMFr"><button class="denied__link">Follow us on @LingLibre_WMFR for updates.</button></a>
-    <a href="https://meta.wikimedia.org/wiki/Talk:Lingua_Libre#2021_Great_fire%27s_meet_up_point"><button class="denied__link">Meet up point on Commons.</button></a>
+    <a href="https://meta.wikimedia.org/wiki/Talk:Lingua_Libre#2021_Great_fire%27s_meet_up_point"><button class="denied__link">Meet up point on Meta.</button></a>
   </div>
 </body>
   <style>
